# gesture_detect

./: CMakeLists.txt  README.md  main.cpp  onnx_import.py  struct.txt
config/: Struct.h  param.h  param.txt
src/detect/: CMakeLists.txt
src/detect/include/: OpenvinoInfer.h  detect.hpp  pid.hpp
src/detect/src/: OpenvinoInfer.cpp  detect.cpp
src/record/: CMakeLists.txt
src/record/include/: Record.h
src/record/src/: Record.cpp
src/sensors/: CMakeLists.txt
src/sensors/include/: hik_camera.h
src/sensors/src/: hik_camera.cpp
src/serialport/: CMakeLists.txt
src/serialport/include/: CRC_Check.h  serialport.h
src/serialport/src/: serialport.cpp
src/utility/: CMakeLists.txt
src/utility/include/: fileToolkit.hpp
src/utility/src/: fileToolkit.cpp
